# fcl

./: .gitignore  .gitmodules  DEVLOG.md  Makefile  README.md  SUBMODULES.md  designthoughts.md  fcl.cabal  literature.md  stack.yaml
OpenCL-experiments/: README.md
OpenCL-experiments/copy-1D_vs_2D-grid/: README.md  copy.c  copy1D.cl  copy2D.cl
OpenCL-experiments/strip-mining/: README.md  copy.c  copy.cl
OpenCL-experiments/transpose-1D_vs_2D-grid/: Makefile  README.md  transpose.c  transpose.cl
OpenCL-experiments/work-group_virtualization/: Makefile  copy.c
cases/: Makefile  README.md  life.tail  sandbox.sh
cases/00_copy/OpenCL/: copy.c
cases/00_copy/fcl/: Makefile  copy  copy.c  copy.cl  copy.fcl  copy_handwritten.c
cases/00_reduce/OpenCL/: Makefile  reduce.c
cases/00_reduce/nvidia-original/: Makefile
cases/00_reduce0/: Makefile  reduce0.c  reduce0.cl
cases/00_reductions_nvidia/: Makefile
cases/00_reductions_nvidia/src/: oclReduction.cpp
cases/01_reverse/: Makefile  README.md  kernels.cl  reverse  reverse.c
cases/01_reverse/OpenCL/: Makefile  reverse.c  reverse.cl  reverseNVIDIA.cl
cases/01_reverse/fcl/: Makefile  reverse.c  reverse.cl  reverse.fcl  reverse_handwritten.c
cases/02_transpose/: .gitignore
cases/02_transpose/Haskell/: Transpose.hs
cases/02_transpose/OpenCL/: Makefile  transpose.c  transpose.cl
cases/02_transpose/fcl/: Makefile  transpose.c  transpose.cl  transpose.fcl  transpose3.fcl  transpose_handopt.c  transpose_handopt.cl  transpose_handopt2.c  transpose_handopt2.cl  transpose_handopt3.c  transpose_handopt3.cl
cases/02_transpose/nvidia-original/: Makefile  SdkMasterLog.csv  oclTranspose.txt
cases/03_copy/OpenCL/: Makefile  copy.c  copy.cl
cases/03_reduce/OpenCL/: reduce
cases/03_reduce/fcl/: Makefile  reduce.c  reduce.cl  reduce.fcl  reduce_handwritten.c
cases/03_reduce/nvidia-original/: oclReduction  oclReduction.txt
cases/03_transpose/: Makefile  oclTranspose.txt
cases/04_sobol-pi/Haskell/: SobolPi.lhs
cases/04_sobol-pi/OpenCL/: Makefile  cosmin-independent.cl  cosmin-strengthred.cl  sobol-independent.c  sobol-pi  sobol.h
cases/04_sobol-pi/fcl/: sobol.fcl
cases/08_sklansky-scan/fcl/: Makefile  scan.fcl  scan2.fcl
cases/ObsidianSobol/: LICENSE  ObsidianSobol.cabal  SobolMain.hs  SobolObsidian.hs
cases/reverse/: Makefile  README.md  reverse.c
cases/shared/: config.mk  template.mk
cases/shared/include/: oclvalidate.h
cases/shared/nvidia-opencl/: Makefile
cases/transpose/: .gitignore  Makefile
cases/transpose/nvidia-opencl/: Makefile
cases/transpose/src/: oclTranspose.cpp
cli/: Main.hs  MainIL.hs
docs/: designthoughts.md  literature.md  notes-and-links.md
examples/: mapForceMap.fcl  maps.fcl  reduce.fcl  sobol.fcl  transpose.fcl
fcl-examples/: Reduce.hs  Test.hs  TestTranspose.hs  prelude.fcl  prelude_mono.fcl  test_reduce.fcl
hostcode/: Makefile  Reduce.hs  input.csv
include/: fcl.h
lib/: builtins.fcl  prelude.fcl
obsidian-experiments/: sandbox.sh
obsidian-experiments/ObsidianSobol/: README.md  SobolList.hs  SobolMain.hs  SobolObsidian.hs
results/: NVIDIA-reduce  NVIDIA-reduce-microcl
shared/: Makefile
src/: FCL.hs  Main.hs  Maps.hs  Reduce.hs  Reverse.hs  Sobol.hs  Test.hs  TestTranspose.hs  Transpose.hs  TransposeLists.hs
src/FCL/: Compile.hs  Desugaring.hs  Error.hs  Eval.hs  Infer.hs  Inline.hs  Instantiate.hs  Monomorphization.hs  Pretty.hs  Simplify.hs  Substitution.hs  TypeInference.hs
src/FCL/Compile/: CompileEnvironment.hs  Config.hs  Monad.hs  Value.hs  Values.hs
src/FCL/Core/: Identifier.hs  Literal.hs  MonoLevel.hs  Monotyped.hs  PolyLevel.hs  Polytyped.hs  SourceRegion.hs  Syntax.hs  Untyped.hs
src/FCL/Eval/: ArrayLib.hs
src/FCL/IL/: Analysis.hs  CodeGen.hs  Cons.hs  Lexer.hs  NumberVars.hs  Optimise.hs  Parser.hs  Pretty.hs  Program.hs  Syntax.hs  TypeCheck.hs  external-syntax.txt
src/FCL/Infer/: Monad.hs  Substitution.hs  TypeEnvironment.hs  Unification.hs
src/FCL/Type/: Monomorphic.hs  Polymorphic.hs
src/Language/: CGen.hs  FCL.hs  GPUIL.hs  ObsidianLight.hs
src/Language/CGen/: Analysis.hs  Cons.hs  ConsGPU.hs  Monad.hs  Optimise.hs  PrettyC.hs  PrettyCUDA.hs  PrettyLib.hs  PrettyOpenCL.hs  SimpleAllocator.hs  Syntax.hs
src/Language/FCL/: Compile.hs  CompileConfig.hs  Eval.hs  ILKernel.hs  InitTyVars.hs  Inline.hs  KernelProgram.hs  Lexer.hs  Library.hs  Parser.hs  Pretty.hs  PrettyPrint.hs  Program.hs  ReduceProgram.hs  Simplify.hs  SmartCons.hs  SourceRegion.hs  Syntax.hs  Values.hs  (+2 more)
src/Util/: PrettyLib.hs
tail-examples/: bbridge.tail  rodinia-hotspot.tail
test/: FCLGen_Syntax.hs  FCLTest_ArrayLib.hs  FCLTest_Eval.hs  FCLTest_Large.hs  FCLTest_TypeInference.hs
tests/: README.md
tests/backend/: 00_iota.expected  00_iota.fcl  01_map.fcl  Makefile  foldl.expected  iota.fcl  map.expected  scanl.expected  template.mk
tests/benchmarks/: Makefile  common.fcl  copy.expected  copy.fcl  dotp.fcl  matmul.expected  matmul.fcl  matvecmul.expected  matvecmul.fcl  reduce-noncommutative.fcl  reduce.fcl  reverse.fcl  scan.expected  scan.fcl  sobol.expected  sobol.fcl  sobol_direction_vectors.csv  transpose.expected  transpose.fcl
tests/frontend/: 00_scalar_bool.fcl  00_scalar_bool.fcl.types  01_scalar_int.fcl  01_scalar_int.fcl.types  02_scalar_double.fcl  02_scalar_double.fcl.types  03_function_mono.fcl  03_function_mono.fcl.types  04_function_poly.fcl  04_function_poly.fcl.types  05_signatures.fcl.types  06_let_poly.fcl  06_let_poly.fcl.types  07_let_poly_extra.fcl  07_let_poly_extra.fcl.types  08_array_pull.fcl  09_program.fcl  Makefile  infix.fcl  nested-poly.fcl  unit.fcl
tests/il/: Makefile  copy.il  transpose.il  transpose_opt.il
tests/shared/: bench-template.mk  config.mk  test-template.mk
(+126 files in other folders)
