Name:                fcl
Version:             0.1
Category:            Language
License:             BSD3
Build-type:          Simple
Maintainer:          dybber@dybber.dk
Cabal-version:       >= 1.10

Data-files: lib/prelude.fcl

Library
  Build-depends: array >= 0.3 && < 0.6
               , base >= 3 && < 5
               , cgen >= 0.1
               , containers >= 0.5
               , parsec >= 3.0 && < 3.2
               , pretty >= 1.1
               , transformers >= 0.4.2 && < 0.5

  HS-source-dirs: src

  exposed-modules: Language.FCL
                   Language.FCL.Syntax
                   Language.FCL.SourceRegion
                   Language.FCL.Lexer
                   Language.FCL.Parser
                   Language.FCL.Pretty
                   Language.FCL.TypeInference
                   Language.FCL.Inline
                   Language.FCL.Simplify
                   Language.FCL.Eval
                   Language.FCL.Eval.ArrayLib
                   Language.FCL.Values
                   Language.FCL.ILKernel
                   Language.FCL.Compile
                   Language.FCL.Host.Syntax
                   Language.FCL.Host.Program

  Default-Language: Haskell2010
  GHC-Options: -Wall
  GHC-prof-options: -fprof-auto

Executable fcl
  Build-depends: base >= 3 && < 5,
                 transformers >= 0.4.2 && < 0.5,
                 fcl

  Main-is: src/Main.hs

  Default-Language:   Haskell2010
  Ghc-Options:        -Wall
