Name:                fcl
Version:             0.1
Category:            Language
License:             BSD3
Build-type:          Simple
Maintainer:          dybber@dybber.dk
Cabal-version:       >= 1.10

Data-files: lib/prelude.fcl

Library
  Build-depends: array >= 0.3 && < 0.6
               , base >= 3 && < 5
               , cgen >= 0.1
               , containers >= 0.5
               , parsec >= 3.0 && < 3.2
               , pretty >= 1.1
               , transformers >= 0.4.2 && < 0.5

  HS-source-dirs: src

  exposed-modules: FCL
                   FCL.Core.Identifier
                   FCL.Core.SourceRegion
                   FCL.Core.Syntax

                   FCL.External.Lexer
                   FCL.External.Parser
                   FCL.External.Pretty

                   FCL.TypeInference
                   FCL.Inline
                   FCL.Simplify
                   FCL.Substitution

                   FCL.Compile
                   FCL.Compile.Config
                   FCL.Compile.Values
                   
                   FCL.Eval
                   FCL.Eval.ArrayLib
                   
                   FCL.IL.Syntax
                   FCL.IL.CodeGen
                   FCL.IL.Program
                   FCL.IL.Cons

  Default-Language: Haskell2010
  GHC-Options: -Wall
  GHC-prof-options: -fprof-auto

Executable fcl
  Build-depends: base >= 3 && < 5,
                 transformers >= 0.4.2 && < 0.5,
                 fcl

  Main-is: cli/Main.hs

  Default-Language:   Haskell2010
  Ghc-Options:        -Wall
