Name:                fcl
Version:             0.1
Category:            Language
License:             BSD3
Build-type:          Simple
Maintainer:          dybber@dybber.dk
Cabal-version:       >= 1.10

Data-files: lib/prelude.fcl

Library
  Build-depends: array >= 0.3 && < 0.6
               , base >= 3 && < 5
               , cgen >= 0.1
               , containers >= 0.5
               , parsec >= 3.0 && < 3.2
               , wl-pprint >= 1.2
               , transformers >= 0.4.2 && < 0.5

  HS-source-dirs: src

  exposed-modules: FCL
                   FCL.Core.Identifier
                   FCL.Core.Literal
                   FCL.Core.MonoLevel
                   FCL.Core.PolyLevel
                   FCL.Core.Untyped
                   FCL.Core.Polytyped
                   FCL.Core.Monotyped

                   FCL.External.Syntax
                   FCL.External.Lexer
                   FCL.External.Parser

                   FCL.Pretty
                   
                   FCL.Desugaring

                   FCL.Instantiate
                   FCL.Substitution
                   FCL.Infer
                   FCL.Infer.Monad
                   FCL.Infer.Unification
                   FCL.Infer.TypeEnvironment

                   FCL.Monomorphization

                   FCL.Core.SourceRegion

                   FCL.Compile
                   FCL.Compile.Config
                   FCL.Compile.Value
                   FCL.Compile.CompileEnvironment
                   
                   -- FCL.Eval
                   -- FCL.Eval.ArrayLib
                   
                   FCL.IL.Syntax
                   FCL.IL.Pretty
                   FCL.IL.Analysis
                   FCL.IL.Analysis.Graph
                   FCL.IL.Analysis.Dataflow
                   FCL.IL.Analysis.Liveness
                   FCL.IL.Analysis.FreeVars
                   FCL.IL.Analysis.ReachingDefs
                   FCL.IL.Optimise
                   FCL.IL.Optimise.ConstantFold
                   FCL.IL.Optimise.ConstantPropagation
                   FCL.IL.Optimise.CopyPropagation
                   FCL.IL.Optimise.DeadCodeElimination
                   FCL.IL.Optimise.LoopUnroll
                   FCL.IL.CodeGen
                   FCL.IL.Program
                   FCL.IL.Cons

  Default-Language: Haskell2010
  GHC-Options: -Wall
  GHC-prof-options: -fprof-auto

Executable fcl
  Build-depends: base >= 3 && < 5,
                 transformers >= 0.4.2 && < 0.5,
                 fcl

  Main-is: cli/NewMain.hs

  Default-Language:   Haskell2010
  Ghc-Options:        -Wall
